--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.1.3",
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
+    "expo-print": "~11.3.0",
+    "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -31,17 +33,16 @@
     "react-native-elements": "^3.4.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-openanything": "^0.0.6",
+    "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-tab-view-custom": "^2.15.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0",
     "react-navigation-stack": "^2.10.4",
-    "rn-country-picker": "^1.0.1",
-    "expo-print": "~11.3.0",
-    "expo-sharing": "~10.3.0",
-    "react-native-webview": "11.23.0"
+    "rn-country-picker": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
