--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.7",
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
     "expo-print": "~11.3.0",
@@ -32,6 +33,7 @@
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-elements": "^3.4.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-openanything": "^0.0.6",
     "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "4.3.1",
