--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^1.3.0",
+    "@zegocloud/zego-uikit-rn": "^1.4.2",
     "axios": "^1.1.3",
     "dayjs": "^1.11.7",
     "expo": "~46.0.9",
@@ -26,6 +28,7 @@
     "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
+    "react-delegate-component": "^1.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-countdown-component": "^2.7.1",
@@ -44,7 +47,8 @@
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
     "react-navigation-stack": "^2.10.4",
-    "rn-country-picker": "^1.0.1"
+    "rn-country-picker": "^1.0.1",
+    "zego-express-engine-reactnative": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
