--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-snackbar": "^2.4.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^12.1.1",
+    "react-native-switch-toggle": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.26.0",
     "rn-country-picker": "^1.0.1",
