--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-native": "0.70.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-datepicker": "^1.7.2",
+    "react-native-document-picker": "^8.1.3",
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-picker": "^5.0.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-openanything": "^0.0.6",
