--- a/package.json
+++ b/package.json
@@ -27,16 +27,19 @@
     "react-delegate-component": "^1.0.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-blob-util": "^0.17.1",
     "react-native-countdown-component": "^2.7.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^8.1.3",
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^5.0.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-openanything": "^0.0.6",
+    "react-native-pdf": "^6.6.2",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^3.4.1",
