--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,4 +10,6 @@ if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true")
     project(":ReactAndroid:hermes-engine").projectDir = file('../node_modules/react-native/ReactAndroid/hermes-engine')
     include ':react-native-html-to-pdf'
     project(':react-native-html-to-pdf').projectDir = new File(rootProject.projectDir,'../node_modules/react-native-html-to-pdf/android')
-}
+    include ':react-native-fs'
+    project(':react-native-fs').projectDir = new File(settingsDir, '../node_modules/react-native-fs/android')
+    }
