--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-document-picker": "^8.1.3",
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-elements": "^3.4.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^5.0.0",
@@ -52,6 +53,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.26.0",
     "rn-country-picker": "^1.0.1",
+    "rn-fetch-blob": "^0.12.0",
     "zego-express-engine-reactnative": "^3.1.2"
   },
   "devDependencies": {
