--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-blob-util": "^0.17.1",
     "react-native-countdown-component": "^2.7.1",
     "react-native-datepicker": "^1.7.2",
+    "react-native-device-info": "^10.3.0",
     "react-native-document-picker": "^8.1.3",
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-elements": "^3.4.2",
