--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-openanything": "^0.0.6",
+    "react-native-option-menu": "^1.1.3",
     "react-native-pdf": "^6.6.2",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^2.13.0",
