--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,7 +39,12 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # are providing them.
 newArchEnabled=false
 
-AROGYA=arogya.jks
-AROGYA_KEY_ALIAS=key0
-AROGYA_STORE_PASSWORD=JISL-offshore
-AROGYA_KEY_PASSWORD=JISL-offshore
+# AROGYA=arogya.jks
+# AROGYA_KEY_ALIAS=key0
+# AROGYA_STORE_PASSWORD=JISL-offshore
+# AROGYA_KEY_PASSWORD=JISL-offshore
+
+MYAPP_RELEASE_STORE_FILE=my-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=TH-key
+MYAPP_RELEASE_STORE_PASSWORD=trust@heal
+MYAPP_RELEASE_KEY_PASSWORD=trust@heal
