--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newjarogyaapp",
+  "name": "TrustHealApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-community/slider": "4.2.3",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/messaging": "^17.3.2",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.6",
@@ -20,6 +22,8 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@zegocloud/zego-uikit-prebuilt-call-rn": "^1.3.0",
     "@zegocloud/zego-uikit-rn": "^1.4.10",
+    "agora-react-native-rtm": "^1.5.1",
+    "agora-rn-uikit": "^5.0.1",
     "axios": "^1.1.3",
     "dayjs": "^1.11.7",
     "native-base": "^3.4.15",
@@ -27,6 +31,7 @@
     "react-delegate-component": "^1.0.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-agora": "^4.1.2",
     "react-native-blob-util": "^0.17.1",
     "react-native-countdown-component": "^2.7.1",
     "react-native-datepicker": "^1.7.2",
