--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-openanything": "^0.0.6",
     "react-native-option-menu": "^1.1.3",
     "react-native-pdf": "^6.6.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^3.4.1",
